--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/Artur2121/project.git"
   },
-  "author": "Artur",
+  "author": "Artur1",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Artur2121/project/issues"
